...
        android:textColor="@android:color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/boton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Todos"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toBottomOf="@id/tvNombreAnimal"
        app:layout_constraintStart_toStartOf="parent"
...
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/boton3"
        app:layout_constraintStart_toStartOf="parent"
        app:icon="@drawable/baseline_pets_24"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/boton5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Busqueda avanzada"
        android:textColor="@color/black"
        android:layout_margin="8dp"
        android:elevation="4dp"
...
